# RAMENgine

./: CMakeLists.txt  LICENSE  README.md
demos/: CMakeLists.txt
demos/cube/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
libs/glad/: CMakeLists.txt  generate.sh  gl.h  glad.c
res/meshes/: alpha_test_scene.mtl
res/shaders/: hud_shader.fs  scene_shader.fs  scene_shader.vs
src/: CMakeLists.txt  Camera.cpp  Camera.hpp  Engine.cpp  Engine.hpp  GameLogic.hpp  GlfwWindow.cpp  GlfwWindow.hpp  Logger.cpp  Logger.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Object.cpp  Object.hpp  README.md  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Window.cpp  Window.hpp  utils.hpp
src/backends/: Backend.cpp  Backend.hpp  OpenGLBackend.cpp  OpenGLBackend.hpp
src/exceptions/: Exception.cpp  Exception.hpp  WindowException.cpp  WindowException.hpp
src/interfaces/: Positionable.cpp  Positionable.hpp  Rotationable.cpp  Rotationable.hpp  Scalable.cpp  Scalable.hpp
src/shaders/: GLSLShader.cpp  GLSLShader.hpp  SPIRVShader.cpp  SPIRVShader.hpp  Shader.hpp
tests/: CMakeLists.txt  tests.cpp
utils/: CMakeLists.txt  parse_vertices.cpp
